/*
 * This file is generated by jOOQ.
 */
package com.baeldung.jooq.model;

import com.baeldung.jooq.model.tables.Article;
import com.baeldung.jooq.model.tables.Author;

/**
 * Convenience access to all tables in public
 */
@SuppressWarnings({"all", "unchecked", "rawtypes"})
public class Tables {

    /**
     * The table <code>public.article</code>.
     */
    public static final Article ARTICLE = Article.ARTICLE;

    /**
     * The table <code>public.author</code>.
     */
    public static final Author AUTHOR = Author.AUTHOR;

}
